Project_Cognize/TEMP/test_results/indexer_result.txt
file:///home/els/Shooting-Game/ShootingGame7/Project_Cognize/scripts/indexer.js:40
const __filename = fileURLToPath(import.meta.url);
      ^

SyntaxError: Identifier '__filename' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:148:19)

Node.js v20.19.6
